refactor(exporter): 优化代码质量和依赖管理